--- a/TEMA9GOOGLEMAPSAPI/app/src/main/res/layout/activity_main.xml
+++ b/TEMA9GOOGLEMAPSAPI/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F2F4F2"
     tools:context=".MainActivity">
 
     <TextView
@@ -89,15 +90,15 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="378dp"
-        android:layout_height="445dp"
+        android:layout_width="401dp"
+        android:layout_height="462dp"
         android:layout_marginTop="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintHorizontal_bias="0.727"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLogitud"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="0.333"
         tools:context=".MainActivity" />
 
     <com.google.android.material.slider.Slider
